--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<ul>
+	<li><%= link_to "Users", users_path %></li>
+	<li><%= link_to "Issues", issues_path %></li>
+</ul>
