added basic links

--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,4 +1,4 @@
-<br />This issue's subject is - <%= @issue.subject %>
+<p>This app's name is <%= @app.name %>.</p>
 
 <%= link_to "Home", root_path %> | 
 <%= link_to "Issues", issues_path %> |
