--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,4 +1,9 @@
-<br />This issue's subject is - <%= @issue.subject %>
+<h2>Apps</h2>
+<ul>
+	<% @apps.each do |app| %>
+		<li><%= link_to app.name, app %></li>
+	<% end %>
+</ul>
 
 <%= link_to "Home", root_path %> | 
 <%= link_to "Issues", issues_path %> |
