--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Home#index</h1>
-<ul>
-	<li><%= link_to "Users", users_path %></li>
-	<li><%= link_to "Issues", issues_path %></li>
-</ul>
+
+<%= link_to "Home", root_path %> | 
+<%= link_to "Issues", issues_path %> |
+<%= link_to "Apps", apps_path %>
