--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -5,4 +5,6 @@
 	<% end %>
 </ul>
 
-<%= link_to "Home", root_path %> | <%= link_to "Users", users_path %>
+<%= link_to "Home", root_path %> | 
+<%= link_to "Issues", issues_path %> |
+<%= link_to "Apps", apps_path %>
