--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
 <br />This user's name is <%= @user.name %>
+
+<%= link_to "Home", root_path %> | 
+<%= link_to "Issues", issues_path %> |
+<%= link_to "Apps", apps_path %>
