--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,10 +1,9 @@
 <h2>Issues</h2>
 <ul>
 	<% @issues.each do |issue| %>
-	<li><%= link_to issue.subject, issue %></li>
+	<li><%= link_to issue.subject, app_issue_path(issue.app, issue) %></li>
 	<% end %>
 </ul>
 
-<%= link_to "Home", root_path %> | 
-<%= link_to "Issues", issues_path %> |
+<%= link_to "Home", root_path %> |
 <%= link_to "Apps", apps_path %>
