--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,10 +1,9 @@
 <h2>Apps</h2>
 <ul>
 	<% @apps.each do |app| %>
-		<li><%= link_to app.name, app %></li>
+		<li><%= link_to app.name, app %> (<%= link_to "Issues", app_issues_url(app) %>)</li>
 	<% end %>
 </ul>
 
 <%= link_to "Home", root_path %> | 
-<%= link_to "Issues", issues_path %> |
 <%= link_to "Apps", apps_path %>
