--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,5 +1,4 @@
-<br />This issue's subject is - <%= @issue.subject %>
+<br />This issue's subject is - <%= @issue.subject %> <br /><br />
 
 <%= link_to "Home", root_path %> | 
-<%= link_to "Issues", issues_path %> |
 <%= link_to "Apps", apps_path %>
