--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,7 +1,10 @@
 <h2>Issues</h2>
 <ul>
 	<% @issues.each do |issue| %>
-	<li><%= link_to issue.subject, app_issue_path(issue.app, issue) %></li>
+		<li>
+			<%= link_to issue.subject, app_issue_path(issue.app, issue) %> -
+			<%= link_to issue.app.name, issue.app %>
+		</li>
 	<% end %>
 </ul>
 
