--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -6,4 +6,5 @@
 </ul>
 
 <%= link_to "Home", root_path %> | 
-<%= link_to "Apps", apps_path %>
+<%= link_to "Apps", apps_path %> |
+<%= link_to "New App", new_app_path %>
