--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -6,4 +6,5 @@
 
 <br />
 <%= link_to "Home", root_path %> | 
-<%= link_to "Apps", apps_path %>
+<%= link_to "Apps", apps_path %> |
+<%= link_to "Add Issue", new_app_issue_path(@app) %>
