--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -9,4 +9,5 @@
 </ul>
 
 <%= link_to "Home", root_path %> |
-<%= link_to "Apps", apps_path %>
+<%= link_to "Apps", apps_path %> |
+<%= link_to "Issues", issues_path %>
