--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,4 +1,5 @@
-<br />This issue's subject is - <%= @issue.subject %> <br /><br />
+<h2><%= @issue.subject %></h2>
 
 <%= link_to "Home", root_path %> |
-<%= link_to "Apps", apps_path %>
+<%= link_to "Apps", apps_path %> |
+<%= link_to "Issues", issues_path %>
