--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -7,4 +7,5 @@
 
 <%= link_to "Home", root_path %> | 
 <%= link_to "Apps", apps_path %> |
+<%= link_to "Issues", issues_path %> |
 <%= link_to "New App", new_app_path %>
