--- a/app/views/apps/new.html.erb
+++ b/app/views/apps/new.html.erb
@@ -7,4 +7,5 @@
 <% end %>
 <br /><br />
 <%= link_to "Home", root_path %> | 
-<%= link_to "Apps", apps_path %>
+<%= link_to "Apps", apps_path %> |
+<%= link_to "Issues", issues_path %>
