--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,4 +1,10 @@
 <h2><%= @issue.subject %></h2>
+<% if !@current_user_vote %>
+	<%= form_for(@issue.voterships.build(:issue_id => @issue.id)) do |f| %>
+	  <%= f.hidden_field :issue_id %>
+	  <%= f.submit "VoteUp" %>
+	<% end %>
+<% end %>
 
 <%= link_to "Home", root_path %> |
 <%= link_to "Apps", apps_path %> |
