--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,11 +1,8 @@
 <h2><%= @issue.subject %></h2>
 <% if !@current_user_vote %>
-	<%= form_for(@issue.voterships.build(:issue_id => @issue.id)) do |f| %>
-	  <%= f.hidden_field :issue_id %>
-	  <%= f.submit "Vote Up" %>
-	<% end %>
+	<%= button_to "Vote Up", voterships_path(:issue_id => @issue.id), method: :create %>
 <% else %>
-	 <%= button_to 'Cancel Vote', @current_user_vote, method: :delete %>
+	<%= button_to "Cancel Vote", @current_user_vote, method: :delete %>
 <% end %>
 
 <%= link_to "Home", root_path %> |
