--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -4,6 +4,8 @@
 <% else %>
 	<%= button_to "Cancel Vote", @current_user_vote, method: :delete %>
 <% end %>
+<%= pluralize(@votes.count, "vote") %>
+<br /><br />
 
 <%= link_to "Home", root_path %> |
 <%= link_to "Apps", apps_path %> |
