added blank comments model and removed user_issues unused table

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<br />This user's name is <%= @user.name %>
+<br />This user's name is <%= @user.name %><br /><br />
 
 <%= link_to "Home", root_path %> |
-<%= link_to "Apps", apps_path %>
+<%= link_to "Apps", apps_path %> |
+<%= link_to "Issues", issues_path %>
