--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -6,6 +6,18 @@
 <% end %>
 <%= pluralize(@votes.count, "vote") %>
 <br /><br />
+Comments--<br />
+<% @issue.comments.each do |comment| %>
+<%= comment.content %> (user_id: <%= comment.user_id %>)<br />
+<% end %>
+
+<br /><br />
+
+<%= form_for @comment do |f| %>
+	<%= render 'comment_fields', :f => f %>
+	<%= f.submit "Submit" %>
+<% end %>
+<br /><br />
 
 <%= link_to "Home", root_path %> |
 <%= link_to "Apps", apps_path %> |
