--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -4,5 +4,6 @@
 	<%= f.submit "Submit" %>
 <% end %>
 <br /><br />
-<%= link_to "Home", root_path %> | 
-<%= link_to "Apps", apps_path %>
+<%= link_to "Home", root_path %> |
+<%= link_to "Apps", apps_path %> |
+<%= link_to "Issues", issues_path %>
