fixing up views

--- a/app/views/issues/_comment_fields.html.erb
+++ b/app/views/issues/_comment_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="field">
-	<%= f.label :Comment %><br />
+	<%= f.label :Add_Comment %><br />
 	<%= f.text_field :content %>
 	<%= f.hidden_field :issue_id %>
 </div>
