--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -3,7 +3,7 @@
 	<%= link_to app.name, app %>
 	<ul>
 		<% app.issues.each do |issue| %>
-			<li><%= link_to issue.subject, app_issue_path(issue.app, issue) %> (<%= pluralize(issue.voterships.count, "Vote") %>)</li>
+			<li><%= link_to issue.subject, app_issue_path(issue.app, issue) %> (<%= pluralize(issue.voterships.count, "Vote") %>) (Status: <%= issue.status %>)</li>
 		<% end %>
 	</ul>
 <% end %>
