added delete actions to issues and apps

--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,4 +1,8 @@
 <h2><%= @app.name %></h2>
+<% if @app.is_owner?(current_user) %>
+	(<%= link_to "Delete App", app_path, method: :delete %>)
+<% end %>
+<br /><br />
 
 <h4>Issues:</h4>
 <% @app.issues.each do |issue| %>
