adding editing of issues

--- a/app/views/issues/_edit_fields.html.erb
+++ b/app/views/issues/_edit_fields.html.erb
@@ -6,4 +6,8 @@
 	<%= f.label :description %><br />
 	<%= f.text_field :description %>
 </div>
+<div class="field">
+	<%= f.label :status %><br />
+	<%= select(:issue, :status, Issue::STATUS, {:include_blank => true}) %>
+</div>
 <br />
