--- a/app/views/apps/edit.html.erb
+++ b/app/views/apps/edit.html.erb
@@ -1,12 +1,12 @@
-<h2>Edit Issue</h2>
+<h2>Edit App</h2>
 
-<%= form_for([@app, @issue]) do |f| %>
-	<%= render 'edit_fields', :f => f %>
+<%= form_for @app do |f| %>
+	<%= render 'fields', :f => f %>
 	<%= f.submit "Submit" %>
 <% end %>
 <br />
 
-<%= link_to "<< Back", app_issue_path %> |
+<%= link_to "<< Back", app_path %> |
 <%= link_to "Home", root_path %> |
 <%= link_to "Apps", apps_path %> |
 <%= link_to "Issues", issues_path %>
