--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,7 +1,7 @@
 <h2>Subject: <%= @issue.subject %></h2>
 <% if @issue.is_owner?(current_user) %>
 	(<%= link_to "Delete Issue", app_issue_path, method: :delete %>)
-	(<%= link_to "Edit Issue", root_path %>)
+	(<%= link_to "Edit Issue", edit_app_issue_path %>)
 <% end %>
 <br /><br />
 Description: <%= @issue.description %><br />
