--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -4,6 +4,8 @@
 		<li><%= link_to app.name, app %></li>
 	<% end %>
 </ul>
+<%= will_paginate @apps %>
+<br />
 
 <%= link_to "Home", root_path %> | 
 <%= link_to "Apps", apps_path %> |
