--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -9,6 +9,9 @@
 <% end %>
 <br /><br />
 
+<%= will_paginate @apps %>
+<br />
+
 <%= link_to "Home", root_path %> |
 <%= link_to "Apps", apps_path %> |
 <%= link_to "Issues", issues_path %>
