--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -6,11 +6,14 @@
 <br /><br />
 
 <h4>Issues:</h4>
-<% @app.issues.each do |issue| %>
+<% @issues.each do |issue| %>
 <li><%= link_to issue.subject, app_issue_path(issue.app, issue) %></li>
 <% end %>
 
 <br />
+<%= will_paginate @issues %>
+<br />
+
 <%= link_to "Home", root_path %> | 
 <%= link_to "Apps", apps_path %> |
 <%= link_to "Issues", issues_path %> |
