--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,9 @@
 <h1>Home#index</h1>
+<ul>
+<% @issues.each do |issue| %>
+	<li><%= issue.subject %> - <%= issue.comments.count %></li>
+<% end %>
+</ul>
 
 <%= link_to "Home", root_path %> | 
 <%= link_to "Apps", apps_path %> |
