fixing up formatting

--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -24,7 +24,7 @@ Status: <%= @issue.status %>
 Comments--<br />
 <% @issue.comments.each do |comment| %>
 <%= comment.content %> (user_id: <%= comment.user_id %>) 
-(<%= link_to "X", comment, method: :delete %>)<br />
+<%= link_to "Delete", comment, method: :delete if comment.user == current_user %><br />
 <% end %>
 
 <br /><br />
