added publisher boolean to users, still need to fix up a lot of logic regarding publishers vs. users

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -9,5 +9,7 @@
 
 <%= link_to "Home", root_path %> | 
 <%= link_to "Apps", apps_path %> |
-<%= link_to "Issues", issues_path %> |
-<%= link_to "New App", new_app_path %>
+<%= link_to "Issues", issues_path %>
+<% if current_user && current_user.is_publisher %>
+	 | <%= link_to "New App", new_app_path %>
+<% end %>
