--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,10 @@
     </div>
   <% end %>
   <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
@@ -22,6 +26,10 @@
   <div class="field">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
+  </div>
+  <div class="field">
+	<%= f.label :publisher %>
+	<%= f.check_box :is_publisher %>
   </div>
   <div class="actions"><%= f.submit %></div>
 <% end %>
