--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -17,4 +17,6 @@
 <%= link_to "Home", root_path %> | 
 <%= link_to "Apps", apps_path %> |
 <%= link_to "Issues", issues_path %> |
-<%= link_to "Add Issue", new_app_issue_path(@app) %>
+<% if current_user && current_user.is_publisher %>
+	 | <%= link_to "Add Issue", new_app_issue_path(@app) %>
+<% end %>
